--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,28 +1,43 @@
-# This build file installs npm dependencies and then deploys multiple Apps Script projects using clasp.
-steps:
-  # Step 1: Install dependencies for all projects.
-  # This runs first to ensure any required node_modules are available.
-  - name: 'node:18'
-    entrypoint: 'npm'
-    args: ['install']
+# Optimized Cloud Build configuration for Google Apps Script deployment
+# Combines all clasp operations in a single step to resolve container isolation issues
 
-  # Step 2: Install clasp, set up credentials, and deploy all projects.
-  # This is a single, combined step to ensure 'clasp' and its credentials persist.
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk' # This image has gcloud, node, and npm.
+steps:
+  # Single combined step: Install clasp, authenticate, and deploy all projects
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:latest'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        # Install clasp globally within this step's container
-        echo "Installing clasp..."
-        npm install -g @google/clasp
-
-        # Set up clasp credentials from Secret Manager
-        # The file will be available in this step's home directory.
-        echo "Setting up clasp credentials..."
-        gcloud secrets versions access latest --secret="clasp-credentials" > ~/.clasprc.json
+        set -e  # Exit on any error
         
-        echo "Deploying to Google Apps Script projects..."
+        echo "🚀 Google Apps Script Deployment Pipeline"
+        echo "========================================"
+        
+        # Step 1: Install clasp globally in this container
+        echo "📥 Installing @google/clasp..."
+        npm install -g @google/clasp
+        echo "✅ Clasp installed: $(clasp --version)"
+        
+        # Step 2: Set up authentication using Secret Manager
+        echo "🔐 Setting up clasp credentials..."
+        gcloud secrets versions access latest \
+          --secret="clasp-credentials" \
+          --project="workspace-automation-466800" > ~/.clasprc.json
+        chmod 600 ~/.clasprc.json
+        
+        # Verify credentials are valid
+        if clasp login --status > /dev/null 2>&1; then
+          echo "✅ Clasp authentication successful"
+        else
+          echo "❌ Clasp authentication failed"
+          exit 1
+        fi
+        
+        # Step 3: Deploy all Apps Script projects
+        echo "📤 Starting deployment to all projects..."
+        echo ""
+        
+        # Define all project directories
         PROJECTS=(
           "projects/calendar"
           "projects/chat" 
@@ -36,41 +51,60 @@ steps:
           "projects/utility"
         )
         
+        # Deployment tracking
         SUCCESS_COUNT=0
+        TOTAL_PROJECTS=0
         FAILED_PROJECTS=""
         
-        # Loop through each project directory and deploy
+        # Deploy each project
         for PROJECT_DIR in "${PROJECTS[@]}"; do
           if [ -d "$PROJECT_DIR" ] && [ -f "$PROJECT_DIR/.clasp.json" ]; then
-            echo "📦 Deploying $PROJECT_DIR..."
-            (cd "$PROJECT_DIR" && clasp push --force) # Run in a subshell to avoid manual cd back
+            TOTAL_PROJECTS=$((TOTAL_PROJECTS + 1))
+            echo "🔄 Deploying $PROJECT_DIR..."
             
-            if [ $? -eq 0 ]; then
-              echo "✅ Successfully deployed $PROJECT_DIR"
+            # Use subshell to avoid changing working directory permanently
+            if (cd "$PROJECT_DIR" && clasp push --force); then
+              echo "✅ $PROJECT_DIR deployed successfully"
               SUCCESS_COUNT=$((SUCCESS_COUNT + 1))
             else
-              echo "❌ Failed to deploy $PROJECT_DIR"
+              echo "❌ $PROJECT_DIR deployment failed"
               FAILED_PROJECTS="$FAILED_PROJECTS $PROJECT_DIR"
             fi
+            echo ""
           else
-            echo "⚠️ Skipping $PROJECT_DIR (directory or .clasp.json not found)"
+            echo "⚠️  Skipping $PROJECT_DIR (missing directory or .clasp.json)"
           fi
         done
         
-        # Print a final summary of the deployment results
-        echo "================================================"
-        echo "Deployment Summary:"
-        echo "✅ Successful deployments: $SUCCESS_COUNT"
-        if [ -n "$FAILED_PROJECTS" ]; then
-          echo "❌ Failed deployments:$FAILED_PROJECTS"
-          echo "================================================"
+        # Final deployment report
+        echo "========================================"
+        echo "📊 DEPLOYMENT SUMMARY"
+        echo "========================================"
+        echo "Total projects: $TOTAL_PROJECTS"
+        echo "Successful: $SUCCESS_COUNT"
+        echo "Failed: $((TOTAL_PROJECTS - SUCCESS_COUNT))"
+        
+        if [ $SUCCESS_COUNT -eq $TOTAL_PROJECTS ] && [ $TOTAL_PROJECTS -gt 0 ]; then
+          echo ""
+          echo "🎉 ALL DEPLOYMENTS COMPLETED SUCCESSFULLY!"
+          echo "========================================"
+        elif [ -n "$FAILED_PROJECTS" ]; then
+          echo ""
+          echo "❌ Failed projects:$FAILED_PROJECTS"
+          echo "========================================"
           exit 1
         else
-          echo "🎉 All deployments completed successfully!"
-          echo "================================================"
+          echo ""
+          echo "⚠️  No valid projects found to deploy"
+          echo "========================================"
+          exit 1
         fi
 
-# Build options
+# Build configuration
 options:
+  substitution_option: 'ALLOW_LOOSE'
   logging: CLOUD_LOGGING_ONLY
   machineType: 'E2_HIGHCPU_8'
+
+# Set reasonable timeout
+timeout: '600s'  # 10 minutes should be sufficient for all deployments
