--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,12 @@
-# Optimized Cloud Build configuration for Google Apps Script deployment
-# Uses Node.js base image with gcloud tools added for reliability
-
+#
+# Final, Production-Ready Cloud Build Configuration
+#
+# This file deploys multiple Google Apps Script projects.
+# - Uses Node.js base image for a stable runtime environment.
+# - Installs Google Cloud SDK using modern best practices.
+# - Verifies authentication before attempting deployments.
+# - Provides a clear and concise summary report.
+#
 timeout: 1200s # 20 minute timeout
 steps:
 - name: 'node:18'
@@ -8,40 +14,39 @@ steps:
   args:
     - -c
     - |
-      set -e # Exit immediately if a command fails
-
-      # Install gcloud using the modern, recommended method
+      # Exit immediately if any command fails
+      set -e
+      
+      # 1. Install Google Cloud SDK using the modern, recommended method
       echo "🚀 Installing dependencies and Google Cloud SDK..."
       sudo apt-get update && sudo apt-get install -y ca-certificates curl gnupg
       sudo mkdir -p /etc/apt/keyrings
       curl -fsSL https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo gpg --dearmor -o /etc/apt/keyrings/cloud.google.gpg
       echo "deb [signed-by=/etc/apt/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee /etc/apt/sources.list.d/google-cloud-sdk.list
       sudo apt-get update && sudo apt-get install -y google-cloud-sdk
-
-      # --- CRITICAL FIX ---
-      # Manually add the gcloud binary to the PATH for this shell session.
-      export PATH=$$PATH:/usr/lib/google-cloud-sdk/bin
       
+      # 2. Add the gcloud SDK to the PATH for this step
+      export PATH=$$PATH:/usr/lib/google-cloud-sdk/bin
       echo "✅ gcloud SDK installed and configured."
-      echo "gcloud version: $$(gcloud --version | head -1)"
-
-      # Now run the rest of your script
+      
+      # 3. Install and verify clasp
       echo "📥 Installing @google/clasp..."
       npm install -g @google/clasp
       echo "✅ Clasp installed: $$(clasp --version)"
       
+      # 4. Authenticate and verify credentials
       echo "🔐 Setting up clasp credentials..."
       gcloud secrets versions access latest --secret="clasp-credentials" --project="$PROJECT_ID" > ~/.clasprc.json
       chmod 600 ~/.clasprc.json
       
-      # Verify credentials are valid
       if clasp login --status > /dev/null 2>&1; then
         echo "✅ Clasp authentication successful"
       else
-        echo "❌ Clasp authentication failed"
+        echo "❌ Clasp authentication failed. Check the 'clasp-credentials' secret in Secret Manager."
         exit 1
       fi
       
+      # 5. Deploy all projects
       echo "📦 Deploying all Google Apps Script projects..."
       PROJECTS=(
         "projects/calendar" "projects/chat" "projects/docs" "projects/drive"
@@ -70,26 +75,24 @@ steps:
         fi
       done
       
-      echo "================================================"
+      # 6. Report Summary
+      echo "================================================="
       echo "📊 DEPLOYMENT SUMMARY"
-      echo "================================================"
-      echo "Total projects: $$TOTAL_PROJECTS"
+      echo "================================================="
+      echo "Total projects found: $$TOTAL_PROJECTS"
       echo "✅ Successful deployments: $$SUCCESS_COUNT"
-      echo "❌ Failed deployments: $$((TOTAL_PROJECTS - SUCCESS_COUNT))"
       
       if [ $$SUCCESS_COUNT -eq $$TOTAL_PROJECTS ] && [ $$TOTAL_PROJECTS -gt 0 ]; then
-        echo ""
         echo "🎉 ALL DEPLOYMENTS COMPLETED SUCCESSFULLY!"
       elif [ -n "$$FAILED_PROJECTS" ]; then
+        echo "❌ Failed deployments: $$((TOTAL_PROJECTS - SUCCESS_COUNT))"
         echo "Failed projects:$$FAILED_PROJECTS"
         exit 1
       else
-        echo "⚠️ No valid projects found to deploy"
+        echo "⚠️ No valid projects found to deploy."
         exit 1
       fi
-
-# Build configuration
 options:
-  substitution_option: 'ALLOW_LOOSE'
+  substitution_option: ALLOW_LOOSE
   logging: CLOUD_LOGGING_ONLY
-  machineType: 'E2_HIGHCPU_8'
+  machineType: E2_HIGHCPU_8
